Fix icons and images not showing

--- a/src/pages/NewVideo/NewVideo.module.css
+++ b/src/pages/NewVideo/NewVideo.module.css
@@ -116,8 +116,6 @@
 .buttons button:active {
     background-color: rgb(0, 0, 0);
     color: white;
-    border-color: #0011fb;
-    box-shadow: inset 0 0 20px rgb(0, 55, 255);
+    border-color: #ffffff;
+    box-shadow: inset 0 0 20px rgb(255, 255, 255);
 }
-
-
