--- a/src/pages/NotFound/NotFound.module.css
+++ b/src/pages/NotFound/NotFound.module.css
@@ -1,6 +1,6 @@
 .container {
     height: 80vh;
-    background-color: antiquewhite;
+    background-color: rgb(245, 245, 245);
     display: flex;
     flex-direction: column;
     justify-content: center;
